# CSE158_Assignment1

./: .gitignore  Assignment 1.txt  README.md  assignment1.py  predictions_Category.csv  predictions_Rating.csv  predictions_Read.csv  pyproject.toml  writeup.txt
src/goob_ai/: __init__.py  cli.py  config.py  data.py
src/goob_ai/models/: __init__.py  category.py  rating.py  read.py
src/goob_ai/pipelines/: __init__.py  category.py  rating.py  read.py
src/goob_ai/utils/: logging.py
tests/: __init__.py  test_category_classifier.py  test_rating_model.py  test_read_classifier.py
