[project]
name = "goob-ai"
version = "0.1.0"
description = "Modular solutions for the Goodreads recommender assignment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

